--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Week3AssessmentKey</string>
+    <string name="welcome_text">Welcome, %1$s to the %2$S class!</string>
+    <string name="what_is_your_name">What is your name?</string>
+    <string name="are_you_a_mage_warrior_or_archer">Are you a mage, warrior, or archer?</string>
+    <string name="finish">Finish</string>
+
 </resources>
