--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="what_is_your_name">What is your name?</string>
     <string name="are_you_a_mage_warrior_or_archer">Are you a mage, warrior, or archer?</string>
     <string name="finish">Finish</string>
+    <string name="the_fate_of_the_world_is_in_your_hands">The fate of the world is in your hands</string>
 
 </resources>
